first draft of the manual done

--- a/manual/manual.bib
+++ b/manual/manual.bib
@@ -1,3 +1,15 @@
+@article{ kordt_modeling_2016,
+  author    = {P. Kordt and D. Andrienko},
+  title     = {Modeling of spatially correlated energetic disorder in organic semiconductors},
+  journal   = {J. Chem. Theory Comput.},
+  year      = {2016},
+  volume    = {12},
+  pages     = {36-40},
+  condmat   = {},
+  doi       = {10.1021/acs.jctc.5b00764},
+  abstract  = {
+}}
+
 @article{ poelking_long-range_2016,
   author    = {C. Poelking and D. Andrienko},
   title     = {Long-range embedding of molecular ions and excitations in a polarizable molecular environment},
@@ -29,7 +41,7 @@
 	month = jun,
 	year = {2010},
 	pages = {2067--2074}
-},
+}
 
 @article{thole_molecular_1981,
 	title = {Molecular polarizabilities calculated with a modified dipole interaction},
@@ -45,7 +57,7 @@
 	month = aug,
 	year = {1981},
 	pages = {341--350}
-},
+}
 
 @article{mcmahon_ad_2009,
 	title = {An ad hoc tight binding method to study the electronic structure of semiconducting polymers},
@@ -61,7 +73,7 @@
 	month = oct,
 	year = {2009},
 	pages = {210--214}
-},
+}
 
 @article{kirkpatrick_approximate_2008,
 	title = {An approximate method for calculating transfer integrals based on the {ZINDO} Hamiltonian},
@@ -75,7 +87,7 @@
 	author = {Kirkpatrick, James},
 	year = {2008},
 	pages = {51--56}
-},
+}
 
 @article{nelson_modeling_2009,
 	title = {Modeling Charge Transport in Organic Photovoltaic Materials},
@@ -88,7 +100,7 @@
 	author = {Nelson, Jenny and Kwiatkowski, Joe J. and Kirkpatrick, James and Frost, Jarvist M.},
 	year = {2009},
 	pages = {1768--1778}
-},
+}
 
 @article{walker_electrical_2002,
 	title = {Electrical transport modelling in organic electroluminescent devices},
@@ -103,7 +115,7 @@
 	month = oct,
 	year = {2002},
 	pages = {9825--9876}
-},
+}
 
 @article{marcon_columnar_2008,
 	title = {Columnar mesophases of hexabenzocoronene derivatives. I. Phase transitions},
@@ -117,7 +129,7 @@
 	author = {Marcon, Valentina and Vehoff, Thorsten and Kirkpatrick, James and Jeong, Cheol and Yoon, Do Y. and Kremer, Kurt and Andrienko, Denis},
 	year = {2008},
 	pages = {094505}
-},
+}
 
 @article{borsenberger_charge_1991,
 	title = {Charge transport in disordered molecular solids},
@@ -131,7 +143,7 @@
 	author = {Borsenberger, P. M. and Pautmeier, L. and B{\"a}ssler, H.},
 	year = {1991},
 	pages = {5447}
-},
+}
 
 @article{bredas_molecular_2009,
 	title = {Molecular Understanding of Organic Solar Cells: The Challenges},
@@ -145,7 +157,7 @@
 	author = {Br{\'e}das, Jean-Luc and Norton, Joseph E. and Cornil, J{\'e}r{\^o}me and Coropceanu, Veaceslav},
 	year = {2009},
 	pages = {1691--1699}
-},
+}
 
 @article{baessler_charge_1993,
 	title = {Charge Transport in Disordered Organic Photoconductors a Monte Carlo Simulation Study},
@@ -160,7 +172,7 @@
 	month = jan,
 	year = {1993},
 	pages = {15--56}
-},
+}
 
 @article{valeev_effect_2006,
 	title = {Effect of Electronic Polarization on Charge-Transport Parameters in Molecular Organic Semiconductors},
@@ -174,7 +186,7 @@
 	author = {Valeev, Edward F. and Coropceanu, Veaceslav and da Silva Filho, Demetrio A. and Salman, Seyhan and Br{\'e}das, Jean-Luc},
 	year = {2006},
 	pages = {9882--9886}
-},
+}
 
 @article{lukyanov_extracting_2010,
 	title = {Extracting nondispersive charge carrier mobilities of organic semiconductors from simulations of small systems},
@@ -189,7 +201,7 @@
 	month = nov,
 	year = {2010},
 	pages = {193202}
-},
+}
 
 @article{borsenberger_role_1993,
 	title = {The role of disorder on charge transport in molecularly doped polymers and related materials},
@@ -202,7 +214,7 @@
 	author = {Borsenberger, P. M. and Magin, E. H. and {VanAuweraer}, M. Der and Schryver, F. C. De},
 	year = {1993},
 	pages = {9--47}
-},
+}
 
 @article{scher_anomalous_1975,
 	title = {Anomalous transit-time dispersion in amorphous solids},
@@ -217,7 +229,7 @@
 	month = sep,
 	year = {1975},
 	pages = {2455--2477}
-},
+}
 
 @article{marcus_electron_1993,
 	title = {Electron transfer reactions in chemistry. Theory and experiment},
@@ -231,7 +243,7 @@
 	month = jul,
 	year = {1993},
 	pages = {599}
-},
+}
 
 @article{van_der_holst_modeling_2009,
 	title = {Modeling and analysis of the three-dimensional current density in sandwich-type single-carrier devices of disordered organic semiconductors},
@@ -246,7 +258,7 @@
 	month = feb,
 	year = {2009},
 	pages = {085203}
-},
+}
 
 @article{derrida_velocity_1983,
 	title = {Velocity and diffusion constant of a periodic one-dimensional hopping model},
@@ -262,7 +274,7 @@
 	year = {1983},
 	keywords = {mobility in {1D} general for any rates},
 	pages = {433--450}
-},
+}
 
 @article{pasveer_unified_2005,
 	title = {Unified Description of Charge-Carrier Mobilities in Disordered Semiconducting Polymers},
@@ -277,7 +289,7 @@
 	month = may,
 	year = {2005},
 	pages = {206601}
-},
+}
 
 @article{baumeier_density-functional_2010,
 	title = {Density-functional based determination of intermolecular charge transfer properties for large-scale morphologies},
@@ -291,7 +303,7 @@
 	author = {Baumeier, Bj{\"o}rn and Kirkpatrick, James and Andrienko, Denis},
 	year = {2010},
 	pages = {11103}
-},
+}
 
 @book{gamma_design_1995,
 	edition = {1st ed., Reprint.},
@@ -301,7 +313,7 @@
 	author = {Gamma, Erich and Helm, Richard and Johnson, Ralph E.},
 	month = mar,
 	year = {1995}
-},
+}
 
 @article{chang_new_2005,
 	title = {A new formula to calculate Franck-Condon factors for displaced and distorted harmonic oscillators},
@@ -318,7 +330,7 @@
 	year = {2005},
 	keywords = {Franck-Condon factors, Harmonic oscillators},
 	pages = {102--104}
-},
+}
 
 @article{bortz_new_1975,
 	title = {A new algorithm for Monte Carlo simulation of Ising spin systems},
@@ -335,7 +347,7 @@
 	year = {1975},
 	pages = {10--18},
 	file = {ScienceDirect Snapshot:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/3HXA6S38/science.html:text/html}
-},
+}
 
 @article{troisi_charge-transport_2006,
 	title = {Charge-transport regime of crystalline organic semiconductors: Diffusion limited by thermal off-diagonal electronic disorder},
@@ -349,7 +361,7 @@
 	year = {2006},
 	keywords = {band-structure, mobility, pentacene, transistors},
 	pages = {--}
-},
+}
 
 @article{vukmirovic_charge_2008,
 	title = {Charge patching method for electronic structure of organic systems},
@@ -364,7 +376,7 @@
 	year = {2008},
 	pages = {121102},
 	file = {GetPDFServlet.pdf:/people/thnfs/homes/poelking/.mozilla/firefox/e0b7rg1e.default/zotero/storage/5JNEJTRX/GetPDFServlet.pdf:application/pdf}
-},
+}
 
 @article{kirkpatrick_columnar_2008,
 	title = {Columnar mesophases of hexabenzocoronene derivatives. {II.} Charge carrier mobility},
@@ -378,7 +390,7 @@
 	year = {2008},
 	keywords = {chemistry, discotic liquid-crystals, dynamics, transport},
 	pages = {094506}
-},
+}
 
 @article{dunlap_charge-dipole_1996,
 	title = {Charge-Dipole Model for the Universal Field Dependence of Mobilities in Molecularly Doped Polymers},
@@ -393,7 +405,7 @@
 	month = jul,
 	year = {1996},
 	pages = {542--545}
-},
+}
 
 @article{troisi_charge_2009,
 	title = {Charge Transport in Semiconductors with Multiscale Conformational Dynamics},
@@ -408,7 +420,7 @@
 	month = mar,
 	year = {2009},
 	pages = {116602}
-},
+}
 
 @article{vukmirovic_charge_2009,
 	title = {Charge Carrier Motion in Disordered Conjugated Polymers: A Multiscale Ab Initio Study},
@@ -424,7 +436,7 @@
 	month = dec,
 	year = {2009},
 	pages = {3996--4000}
-},
+}
 
 @article{ruhle_versatile_2009,
 	title = {Versatile Object-Oriented Toolkit for Coarse-Graining Applications},
@@ -439,7 +451,7 @@
 	month = dec,
 	year = {2009},
 	pages = {3211--3223}
-},
+}
 
 @article{seki_electric_2001,
 	title = {Electric field dependence of charge mobility in energetically disordered materials: Polaron aspects},
@@ -456,7 +468,7 @@
 	year = {2001},
 	keywords = {Analytical {1D} for Marcus rates},
 	pages = {014305}
-},
+}
 
 @article{nagata_atomistic_2008,
 	title = {Atomistic simulation on charge mobility of amorphous tris(8-hydroxyquinoline) aluminum (Alq[sub 3]): Origin of {Poole{\textendash}Frenkel{\textendash}type} behavior},
@@ -471,7 +483,7 @@
 	author = {Nagata, Yuki and Lennartz, Christian},
 	year = {2008},
 	pages = {034709}
-},
+}
 
 @article{hutchison_hopping_2005,
 	title = {Hopping Transport in Conductive Heterocyclic Oligomers:  Reorganization Energies and Substituent Effects},
@@ -487,7 +499,7 @@
 	month = feb,
 	year = {2005},
 	pages = {2339--2350}
-},
+}
 
 @article{bredas_charge-transfer_2004,
 	title = {Charge-Transfer and Energy-Transfer Processes in $\pi$-Conjugated Oligomers and Polymers: A Molecular Picture},
@@ -502,7 +514,7 @@
 	month = nov,
 	year = {2004},
 	pages = {4971--5004}
-},
+}
 
 @article{daggett_molecular_1991,
 	title = {Molecular dynamics simulations of small peptides: Dependence on dielectric model and {pH}},
@@ -518,7 +530,7 @@
 	month = feb,
 	year = {1991},
 	pages = {285--304}
-},
+}
 
 @article{novikov_cluster_1995,
 	title = {Cluster Structure in the Distribution of the Electrostatic Potential in a Lattice of Randomly Oriented Dipoles},
@@ -532,7 +544,7 @@
 	month = oct,
 	year = {1995},
 	pages = {14573--14576}
-},
+}
 
 @article{hoffman_reorganization_1996,
 	title = {Reorganization energies and rate constants for electron reactions in glass-forming media and proteins},
@@ -549,7 +561,7 @@
 	year = {1996},
 	keywords = {Electron transfer, Glassy solvents, Reorganization energy, Solvent dynamics},
 	pages = {233--238}
-},
+}
 
 @article{coropceanu_charge_2007,
 	title = {Charge Transport in Organic Semiconductors},
@@ -564,7 +576,7 @@
 	month = apr,
 	year = {2007},
 	pages = {926--952}
-},
+}
 
 @article{cordes_one-dimensional_2001,
 	title = {One-dimensional hopping transport in disordered organic solids. I. Analytic calculations},
