--- a/manual/titlepage.tex
+++ b/manual/titlepage.tex
@@ -32,21 +32,39 @@ Development of this software depends on academic research grants. If you are usi
 
 \vspace{0.1cm}
 \noindent
-\cite{poelking_long-range_2016} Long-range embedding of molecular ions and excitations in a polarizable molecular environment, \\
-Carl Poelking and Denis Andrienko \\
+\cite{poelking_long-range_2016} Long-range embedding of molecular ions and excitations in a polarizable molecular environment, Carl Poelking and Denis Andrienko \\
 \htmladdnormallink{  {\itshape J. Chem. Theory Comp.} 12, 4516-4523, 2016}
 {http://dx.doi.org/10.1021/acs.jctc.6b00599} \\
 
 \vspace{0.1cm}
 \noindent
-\cite{ruhle_microscopic_2011} Microscopic simulations of charge transport in disordered organic semiconductors, \\
+\cite{kordt_modeling_2016} Modeling of spatially correlated energetic disorder in organic semiconductors,
+Pascal Kordt, Denis Andrienko \\
+\htmladdnormallink{  {\itshape J. Chem. Theory Comput.}, 12, 36-40, 2016 }
+{http://dx.doi.org/10.1021/acs.jctc.5b00764} \\
+
+\vspace{0.1cm}
+\noindent
+\cite{ruhle_microscopic_2011} Microscopic simulations of charge transport in disordered organic semiconductors, 
 Victor R\"uhle, Alexander Lukyanov, Falk May, Manuel Schrader, Thorsten Vehoff, James Kirkpatrick, Bj\"orn Baumeier and Denis Andrienko \\
 \htmladdnormallink{  {\itshape J. Chem. Theor. Comp.} 7, 3335, 2011}
 {http://dx.doi.org/10.1021/ct200388s} \\
 
 \vspace{0.1cm}
 \noindent
-\cite{ruhle_versatile_2009} Versatile Object-oriented Toolkit for Coarse-graining Applications \\
+\cite{lukyanov_extracting_2010} Extracting nondispersive charge carrier mobilities of organic emiconductors from simulations of small systems, A. Lukyanov, D. Andrienko \\
+\htmladdnormallink{  {\itshape Phys. Rev. B}, 82, 193202, 2010}
+{http://dx.doi.org/10.1103/PhysRevB.82.193202} \\
+
+\vspace{0.1cm}
+\noindent
+\cite{baumeier_density-functional_2010}
+      Density-functional based determination of intermolecular charge transfer properties for large-scale morphologies, Bj{\"o}rn Baumeier,  James Kirkpatrick, and Denis Andrienko \\
+       \htmladdnormallink{  {\itshape  Phys. Chem. Chem. Phys. } 12, 11103, 2010 }{http://dx.doi.org/10.1039/C002337J} \\
+
+\vspace{0.1cm}
+\noindent
+\cite{ruhle_versatile_2009} Versatile Object-oriented Toolkit for Coarse-graining Applications, 
 Victor R\"uhle, Christoph Junghans, Alexander Lukyanov, Kurt Kremer and Denis Andrienko \\
 \htmladdnormallink{  {\itshape J. Chem. Theor. Comp.} 5, 3211, 2009}
 {http://dx.doi.org/10.1021/ct900369w}
