--- a/manual/titlepage.tex
+++ b/manual/titlepage.tex
@@ -12,7 +12,7 @@
 \vspace*{1cm}
 \vfill
 
-%\center{\footnotesize{compiled from: \hgid}}
+\center{\footnotesize{compiled from: \gitid}}
 %\center{\footnotesize{Programs version: \refhgid}}
 %\vspace*{1cm}
 %\center{
@@ -68,9 +68,6 @@ Victor R\"uhle, Alexander Lukyanov, Falk May, Manuel Schrader, Thorsten Vehoff, 
 Victor R\"uhle, Christoph Junghans, Alexander Lukyanov, Kurt Kremer and Denis Andrienko \\
 \htmladdnormallink{  {\itshape J. Chem. Theor. Comp.} 5, 3211, 2009}
 {http://dx.doi.org/10.1021/ct900369w}
-
-\section*{Development}
-The core development is currently taking place at the Max Planck Institute for Polymer Research, Mainz, Germany.
 
 \section*{Copyright}
 \votcactp is free software. The entire package is available under the Apache License. For details, check
