recursive call of otpions.xml

--- a/manual/input/topology_conjseg.tex
+++ b/manual/input/topology_conjseg.tex
@@ -5,7 +5,7 @@ The file describing hopping sites, or conjugated segments, is used by practicall
 \begin{table}[h]
 \caption{Description of conjugated segments (\xmlsegments).} 
 \label{tab:segments}
-\rowcolors{1}{invisiblegray}{white} {\footnotesize \input{reference/xml/segments.xml} }
+%\rowcolors{1}{invisiblegray}{white} {\footnotesize \input{reference/xml/segments.xml} }
 \end{table}
 %
 \lstdefinelanguage{MXML} {
