--- a/manual/titlepage.tex
+++ b/manual/titlepage.tex
@@ -33,14 +33,14 @@ Development of this software depends on academic research grants. If you are usi
 \vspace{0.1cm}
 \noindent
 \cite{poelking_long-range_2016} Long-range embedding of molecular ions and excitations in a polarizable molecular environment, Carl Poelking and Denis Andrienko \\
-\htmladdnormallink{  {\itshape J. Chem. Theory Comp.} 12, 4516-4523, 2016}
+\htmladdnormallink{  {\itshape J. Chem. Theory Comp.} 12, 4516, 2016}
 {http://dx.doi.org/10.1021/acs.jctc.6b00599} \\
 
 \vspace{0.1cm}
 \noindent
 \cite{kordt_modeling_2016} Modeling of spatially correlated energetic disorder in organic semiconductors,
 Pascal Kordt, Denis Andrienko \\
-\htmladdnormallink{  {\itshape J. Chem. Theory Comput.}, 12, 36-40, 2016 }
+\htmladdnormallink{  {\itshape J. Chem. Theory Comput.}, 12, 36, 2016 }
 {http://dx.doi.org/10.1021/acs.jctc.5b00764} \\
 
 \vspace{0.1cm}
