rates were not included

--- a/manual/ctp-manual.tex
+++ b/manual/ctp-manual.tex
@@ -120,7 +120,7 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/gdma}
 \input{theory/thole}
 \input{theory/electronic_couplings}
-input{theory/rate}
+\input{theory/rate}
 \input{theory/kmc}
 \input{theory/nondispersive}
 \input{theory/analysis}
