--- a/manual/titlepage.tex
+++ b/manual/titlepage.tex
@@ -52,7 +52,7 @@ Victor R\"uhle, Alexander Lukyanov, Falk May, Manuel Schrader, Thorsten Vehoff, 
 
 \vspace{0.1cm}
 \noindent
-\cite{lukyanov_extracting_2010} Extracting nondispersive charge carrier mobilities of organic emiconductors from simulations of small systems, A. Lukyanov, D. Andrienko \\
+\cite{lukyanov_extracting_2010} Extracting nondispersive charge carrier mobilities of organic semiconductors from simulations of small systems, A. Lukyanov, D. Andrienko \\
 \htmladdnormallink{  {\itshape Phys. Rev. B}, 82, 193202, 2010}
 {http://dx.doi.org/10.1103/PhysRevB.82.193202} \\
 
@@ -68,6 +68,11 @@ Victor R\"uhle, Alexander Lukyanov, Falk May, Manuel Schrader, Thorsten Vehoff, 
 Victor R\"uhle, Christoph Junghans, Alexander Lukyanov, Kurt Kremer and Denis Andrienko \\
 \htmladdnormallink{  {\itshape J. Chem. Theor. Comp.} 5, 3211, 2009}
 {http://dx.doi.org/10.1021/ct900369w}
+
+\vspace{0.1cm}
+\noindent
+\cite{kirkpatrick_approximate_2007} An approximate method for calculating transfer integrals based on the ZINDO Hamiltonian, James Kirkpatrick, \\
+\htmladdnormallink{  {\itshape  Int. J. Quantum Chem.} 108, 51, 2007}{https://doi.org/10.1002/qua.21378}
 
 \section*{Copyright}
 \votcactp is free software. The entire package is available under the Apache License. For details, check
