added pewald description to the manual

--- a/manual/ctp-manual.tex
+++ b/manual/ctp-manual.tex
@@ -119,6 +119,7 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/energetic_disorder}
 \input{theory/gdma}
 \input{theory/thole}
+\input{theory/ewald}
 \input{theory/electronic_couplings}
 \input{theory/rate}
 \input{theory/kmc}
