fix pdb2map ref in the intro

--- a/manual/theory/introduction.tex
+++ b/manual/theory/introduction.tex
@@ -35,7 +35,7 @@ In the following \sect{theory}, we summarize the \slink{sec:theory}{theoretical 
 {\bf Mapping, generation of the sql database}\\
 Converts and partitions atomistic \gromacs trajectory \vskip 0.1cm
 {\noindent  \cmdmap} \\
-Useful tools: \\tool{pdb2map}
+Useful tools: \calc{pdb2map}
 
 \vskip 0.1cm };
 
