--- a/manual/newcommands.tex
+++ b/manual/newcommands.tex
@@ -102,9 +102,9 @@
     \addcontentsline{toc}{chapter}{Bibliography}
 }
 
-\renewcommand*{\showkeyslabelformat}[1]{{\normalfont\tiny\sffamily#1}}
-\definecolor{refkey}{rgb}{1,0,0}
-\definecolor{labelkey}{rgb}{1,0,0}
+%\renewcommand*{\showkeyslabelformat}[1]{{\normalfont\tiny\sffamily#1}}
+%\definecolor{refkey}{rgb}{1,0,0}
+%\definecolor{labelkey}{rgb}{1,0,0}
 
 % Calculus and Linear Algbra Notation
 % formulas
