--- a/manual/theory/correlations.tex
+++ b/manual/theory/correlations.tex
@@ -1,4 +1,4 @@
-\subsection{Spatial correlations of energetic disorder}
+\section{Spatial correlations of energetic disorder}
 \label{sec:eanalyze}
 
 \index{site energy!spatial correlation}
