--- a/manual/theory/electronic_couplings.tex
+++ b/manual/theory/electronic_couplings.tex
@@ -1,4 +1,4 @@
-\section{Transfer integrals }
+\chapter{Electronic couplings}
 \label{sec:transfer_integrals}
 
 The electronic transfer integral\index{electronic coupling}\index{transfer integral|see{electronic coupling}} element $J_{ij}$ entering the Marcus rates in \equ{marcus} is defined as
