--- a/manual/theory/ewald.tex
+++ b/manual/theory/ewald.tex
@@ -1,4 +1,4 @@
-\subsection{Long-range Coulomb iteractions}
+\section{Ewald sums}
 \label{sec:ewald}
 \index{Long-range interactions}
 \index{site energy!Ewald}
