--- a/manual/theory/gdma.tex
+++ b/manual/theory/gdma.tex
@@ -1,4 +1,4 @@
-\subsection{Electrostatic interaction energy}
+\section{Electrostatic interactions}
 \label{sec:distributed_multipoles}
 \index{distributed multipoles}
 \index{site energy!distributed multipoles}
