--- a/manual/theory/moo.tex
+++ b/manual/theory/moo.tex
@@ -1,4 +1,4 @@
-\subsection{ZINDO-based transfer integrals using MOO }
+\section{Semiempirical}
 \label{sec:izindo}
 
 \newcommand{\moo}{MOO\xspace}
