--- a/manual/theory/morphology.tex
+++ b/manual/theory/morphology.tex
@@ -1,4 +1,4 @@
-\section{Material morphology}
+\chapter{Material morphology}
 \label{sec:morphology}
 
 There is no generic recipe on how to predict a large-scale atomistically-resolved morphology of an organic semiconductor. The required methods are system-specific: for ultra-pure crystals, for example, density-functional methods can be used provided the crystal structure is known from experiment. For partially disordered organic semiconductors, however, system sizes much larger than a unit cell  are required. Classical molecular dynamics or Monte Carlo techniques are then the methods of choice. 
