--- a/manual/theory/nondispersive.tex
+++ b/manual/theory/nondispersive.tex
@@ -1,4 +1,4 @@
-\subsection{Extrapolation to nondispersive mobilities}
+\section{Finite size effects}
 \label{sec:nondispersive}
 Predictions of charge-carrier mobilities in partially disordered semiconductors  rely on charge transport simulations in systems which are only several nanometers thick. As a result, simulated charge transport might be dispersive for materials with large energetic disorder~\cite{scher_anomalous_1975,borsenberger_role_1993} and simulated mobilities are system-size dependent. In time-of-flight (TOF) experiments, however, a typical sample thickness is in the micrometer range and transport is often nondispersive. In order to link simulation and experiment, one needs to extract the nondispersive mobility from simulations of small systems, where charge transport is dispersive at room temperature.
 
