--- a/manual/theory/thole.tex
+++ b/manual/theory/thole.tex
@@ -1,4 +1,4 @@
-\subsection{Induction energy - the Thole model}
+\section{Induction interactions}
 \label{sec:thole_model}
 \index{Thole model}
 \index{site energy!polarization}
