--- a/manual/reference/reference.tex
+++ b/manual/reference/reference.tex
@@ -1,13 +1,12 @@
-\chapter{Reference}
 \label{sec:reference}
-\section{Programs}
+\chapter{Programs}
 \label{ref:programs}
 \label{sec:programs}
 Programs execute specific tasks (calculators). 
 
 \input{reference/programs}
 
-\section{Calculators}
+\chapter{Calculators}
 \label{ref:calculators}
 \label{sec:calculators}
 
