--- a/manual/theory/analysis.tex
+++ b/manual/theory/analysis.tex
@@ -1,4 +1,4 @@
-\section{Macroscopic observables}
+\chapter{Macroscopic observables}
 \label{sec:analysis}%
 Spatial distributions of charge and current densities can provide a better insight in the microscopic mechanisms of charge transport.
 %
@@ -36,7 +36,7 @@ where $\tau = \sum_{\alpha} \tau_\alpha$ is the total time used for time averagi
 For ergodic systems and sufficient sampling times, ensemble and time averages should give identical results. 
 In many cases, the averaging procedure reflects a specific experimental technique. For example, an ensemble average over several KMC trajectories with different starting conditions corresponds to averaging over injected charge carriers in a time-of-flight experiment.  In what follows, we focus on the single charge carrier (low concentration of charges) case. 
 
-\subsection{Charge density}
+\section{Charge density}
 \label{sec:occupation}
 
 For a specific type of particles, the microscopic charge density of a site $i$ is proportional to the occupation probability of the site, $p_i$
@@ -54,7 +54,7 @@ If the system is in thermodynamic equilibrium, that is without sources or sinks 
 %
 It can be used to test whether the system is ergodic or not by correlating $\log p_i$ and the site energy $E_i$. Indeed, if $\lambda_{ij} = \lambda_{ji}$ the ratios of forward and backward rates are determined solely by the energetic disorder, $\omega_{ji} / \omega_{ij} = \exp(-\Delta E_{ij} / k_\text{B} T)$ (see \equ{marcus}).
 
-\subsection{Current}
+\section{Current}
 \label{sec:vaverage}
 \index{current}
 If the position of the charge, $\vec{r}$, is an observable, the time evolution of its average $\left<\vec{r}\right>$ is the total current in the system
@@ -78,7 +78,7 @@ splitting between neighboring sites and absence of local average fluxes in equil
 \end{equation}
 A large value of the local current indicates that the site contributes considerably to the total current. A collection of such sites thus represents most favorable charge pathways~\cite{van_der_holst_modeling_2009}.
 
-\subsection{Mobility and diffusion constant}
+\section{Mobility and diffusion constant}
 \label{sec:mobility}
 \index{mobility}
 For a single particle, e.g. a charge or an exciton, a zero-field mobility can be determined by studying particle diffusion in the absence of external fields. Using the particle displacement squared, $\Delta {\bm r}_i^2$, as an observable  we obtain
