--- a/manual/theory/dipro.tex
+++ b/manual/theory/dipro.tex
@@ -1,4 +1,4 @@
-\subsection{Projection of monomer orbitals on dimer orbitals (DIPRO)}
+\section{Projection}
 \label{sec:dipro}
 An approach for the determination of the transfer integral that can be used for any single-particle electronic structure method (Hartree-Fock, DFT, or semiempirical methods) is based on the projection of monomer orbitals on a manifold of explicitly calculated dimer orbitals. This dimer projection (DIPRO) technique including an assessment of computational parameters such as the basis set, exchange-correlation functionals, and convergence criteria is presented in detail in ref.~\cite{baumeier_density-functional_2010}. A brief summary of the concept is given below.
 
