--- a/manual/theory/rate.tex
+++ b/manual/theory/rate.tex
@@ -1,9 +1,9 @@
-\section{Charge transfer rate}
+\chapter{Rates}
 \label{sec:rates}
 
 Charge transfer rates\index{charge transfer rate} can be postulated based on intuitive physical considerations, as it is done in the Gaussian disorder models~\cite{walker_electrical_2002,baessler_charge_1993,borsenberger_charge_1991,pasveer_unified_2005}. Alternatively, charge transfer theories can be used to evaluate rates from quantum chemical calculations~\cite{bredas_molecular_2009,coropceanu_charge_2007,bredas_charge-transfer_2004,nelson_modeling_2009,baumeier_density-functional_2010,ruhle_microscopic_2011}. In spite of being significantly more computationally demanding, the latter approach allows to link the chemical and electronic structure, as well as the morphology, to charge dynamics.
 
-\subsection{Classical charge transfer rate}
+\section{Classical charge transfer}
 \label{sec:rate_classical}
 \index{charge transfer rate!classical}
 
@@ -19,7 +19,7 @@ k_\text{B} T} \right],
 where $T$ is the temperature, $\lambda_{ij} = \lambda_{ij}^\text{int} + \lambda_{ij}^\text{out}$ is the \slink{sec:reorganization}{reorganization energy}, which is a sum of intra- and inter-molecular (outersphere) contributions, $\Delta E_{ij}$ is the \slink{sec:site_energies}{site-energy difference}, or driving force, and $J_{ij}$ is the \slink{sec:transfer_integrals}{electronic coupling element}, or transfer integral. 
 
 
-\subsection{Semi-classical bimolecular rate}
+\section{Semi-classical charge transfer}
 \label{sec:rate_bimolecular}
 \index{charge transfer rate!bimolecular}
 
@@ -61,21 +61,21 @@ H_{\indM'-k} \left( \frac{s_{i}}{\sqrt{2S^{cn}_i}}\right)
 \end{align}
 where $H_n(x)$ is a Hermite polynomial, $s_i=2\sqrt{\lambda_i^{nc}\lambda_i^{cn}} / \hbar(\omega_i^c+\omega_i^n)$, and $S^{cn}_i=\lambda_i^{cn}/\hbar\omega_i^c$. The FC factors for charging of molecule $j$ can be obtained by substituting $(s_i,S^{cn}_i,\omega_i^c)$ with $(-s_j,S^{nc}_j, \omega_j^n)$. In order to evaluate the FC factors, the \slink{sec:eintramolecular}{internal reorganization energy} $\lambda_i^{cn}$ can be computed from the intramolecular PES.
 
-\subsection{Semi-classical rate}
-\label{sec:rate_semiclassical}
-\index{charge transfer rate!semiclassical}
-
-One can also use the quantum-classical rate with a common set of vibrational coordinates~\cite{may_charge_2011}
-\begin{align}
- \omega_{ij} = \frac{2\pi}{\hbar}  \frac{|J_{ij}|^2}{\sqrt{4\pi \lambda_{ij}^\text{out} k_\text{B}T}}
- \sum_{N=0}^\infty \frac{1}{N!} \left( \frac{\lambda_{ij}^\text{int}}{\hbar\omega^\text{int}} \right)^{N}
-  \exp \left( - \frac{\lambda_{ij}^\text{int}}{\hbar\omega^\text{int}}\right)
-%\nonumber\\&&
-\exp
-\left\{ -\frac{ \left[ \Delta E_{ij}-\hbar N\omega^\text{int} -\lambda_{ij}^\text{out} \right]^2}{4\lambda_{ij}^\text{out} k_\text{B}T}
-\right\} .
-\label{equ:jortner}
-\end{align}
+% \subsection{Semi-classical}
+% \label{sec:rate_semiclassical}
+% \index{charge transfer rate!semiclassical}
+% 
+% One can also use the quantum-classical rate with a common set of vibrational coordinates~\cite{may_charge_2011}
+% \begin{align}
+%  \omega_{ij} = \frac{2\pi}{\hbar}  \frac{|J_{ij}|^2}{\sqrt{4\pi \lambda_{ij}^\text{out} k_\text{B}T}}
+%  \sum_{N=0}^\infty \frac{1}{N!} \left( \frac{\lambda_{ij}^\text{int}}{\hbar\omega^\text{int}} \right)^{N}
+%   \exp \left( - \frac{\lambda_{ij}^\text{int}}{\hbar\omega^\text{int}}\right)
+% %\nonumber\\&&
+% \exp
+% \left\{ -\frac{ \left[ \Delta E_{ij}-\hbar N\omega^\text{int} -\lambda_{ij}^\text{out} \right]^2}{4\lambda_{ij}^\text{out} k_\text{B}T}
+% \right\} .
+% \label{equ:jortner}
+% \end{align}
 
 Numerical estimates show that if  $\lambda_{ij}^\text{int} \approx \lambda_{ij}^\text{out}$ and $|\Delta E_{ij}| \ll \lambda_{ij}^\text{out}$ the rates are similar to those of ~\equ{marcus}. In general, there is no robust method to compute $\lambda_{ij}^\text{out}$~\cite{hoffman_reorganization_1996} and  both reorganization energies are often assumed to be of the same order of magnitude. In this case the second condition also holds, unless there are large differences in electron affinities or ionization potentials of neighboring molecules, e.g. in donor-acceptor blends.
 \vskip 0.4cm
